[package]
name = "lean-base"
version = "0.1.0"
edition = "2021"
build = "build/build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lean-sys = { git = "https://github.com/digama0/lean-sys.git", version = "0.0.3" }

[features]
nightly = []

[build-dependencies]
syn = "2"
proc-macro2 = "1"
prettyplease = "0.2.12"